--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "cy",
 	"scripts": {
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run"
+		"cy:open": "cypress open",
+		"cy:run": "cypress run"
 	},
 	"devDependencies": {
 		"cypress": "^5.2.0",
 		"mochawesome": "^6.1.1",
 		"mochawesome-merge": "^4.1.0",
-		"mochawesome-report-generator": "^5.1.0"
+		"mochawesome-report-generator": "^5.1.0",
+		"axe-core": "^4.0.2",
+		"cypress-axe": "^0.8.1"
 	}
 }
